# document-Intelligence

./: README.md  package-lock.json  package.json  pyproject.toml  replit.nix
attached_assets/: Pasted--build-a-three-part-application-that-involves-backend-services-frontend-interface-and-Q-A-features-1740389405557.txt  Pasted-Application-Components-1-Python-Backend-Document-Ingestion-and-RAG-driven-Q-A-o-Purpose-Develop--1740674521949.txt  Pasted-Coding-Exercise-Document-Management-and-RAG-based-Q-A-Application-Candidates-are-required-to-build--1740378052776.txt  Pasted-Question-Answer-Select-Documents-to-Search-Choose-which-documents-to-search-through-for-answers-to-1740386245977.txt
client/src/: App.tsx
client/src/components/: document-list.tsx  document-upload.tsx  error-boundary.tsx  navbar.tsx  qa-interface.tsx
client/src/hooks/: use-collaboration.ts
client/src/pages/: admin-page.tsx  auth-page.tsx  documents-page.tsx  home-page.tsx  qa-page.tsx
python_backend/: document_processor.py  start.sh
server/: auth.ts  index.ts  openai.ts  rag.ts  routes.ts  storage.ts  websocket.ts
server/middleware/: role-guard.ts
server/utils/: document-parser.ts
shared/: schema.ts
