[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "langchain>=0.3.19",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.0",
]
